--- a/vue-router/package.json
+++ b/vue-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-router-test",
+  "name": "vue-router",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-particles": "^1.0.9",
-    "vue-router": "^3.2.0",
-    "vue-typer": "^1.2.0"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.13",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
